--- a/PythonProject1/templates/index.html
+++ b/PythonProject1/templates/index.html
@@ -142,7 +142,7 @@
     <button type="submit" class="btn" onclick="">Оставить заявку</button>
     <button type="button" class="btn cancel" onclick="closeForm();">Закрыть</button>
   </form>
-
+</div>
 
 
     <div id="reviews">
