Добавление поля с выбором номера

--- a/PythonProject1/static/styles.css
+++ b/PythonProject1/static/styles.css
@@ -512,6 +512,7 @@ div, ul, h1, p{
 
 label {
     color:black;
+    margin-left: 5px;
 }
 
 input {
@@ -530,11 +531,12 @@ input {
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 9;
-
+    height: 100%;
 }
 
 /* Добавить стили для контейнера формы */
 .form-container {
+font-weight: 500;
   max-width: 350px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
@@ -605,4 +607,25 @@ input {
 }
 .css-modal-details {
     display:none;
+}
+
+.form-container input[type=radio] {
+    width: auto;
+    margin: 0;
+    margin-right: 10px;
+}
+
+fieldset{
+    border:none;
+    padding: 0;
+    margin:0;
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 15px;
+}
+fieldset label {
+    width: auto;
+    display: flex;
+    align-items: center;
+    height: 50px;
 }
