--- a/PythonProject1/static/styles.css
+++ b/PythonProject1/static/styles.css
@@ -31,7 +31,7 @@ div, ul, h1, p{
     height: 81px;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.85);
-    z-index: 1;
+    z-index: 7;
     display: flex;
     background-attachment: fixed;
     position: fixed;
@@ -628,4 +628,32 @@ fieldset label {
     display: flex;
     align-items: center;
     height: 50px;
+}
+#overlay-2 {
+    position: fixed;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 6;
+    display:flex;
+    width:100%;
+    height: 100%;
+    top: 0;
+    left:0;
+    display:none;
+}
+#review-text {
+    height: 200px;
+}
+
+textarea {
+    border-radius: 10px;
+    font-size: 15px;
+    width:295px;
+}
+#review-question {
+    color:black;
+    width: 100%;
+    margin-bottom: 10px;
+}
+form .btn {
+    border-radius: 10px;
 }
