--- a/PythonProject1/static/styles.css
+++ b/PythonProject1/static/styles.css
@@ -138,6 +138,10 @@ div, ul, h1, p{
     position:relative;
 }
 
+#slides-main p{
+    font-size: 23px;
+}
+
 #slides-main, #slides-room, #slides-feedbacks {
     padding-right: 10px;
     padding-left:10px;
@@ -167,6 +171,8 @@ div, ul, h1, p{
     min-width: 100%;
     gap:24px;
     justify-content: center;
+
+    border-radius: 10px;
 }
 
 .block p {
@@ -327,10 +333,10 @@ div, ul, h1, p{
 .feedback-text > p {
     color: black;
     font-size: 20px;
-    min-width: 390px;
+    min-width: 385px;
     font-weight: 300;
     height:100px;
-    margin-left:5px;
+    margin-left:12px;
 
 }
 .feedback-text > p:hover {
@@ -703,4 +709,9 @@ th, td {
 }
 #exit *{
     margin-top:10px;
+}
+
+#feedback-text p{
+    margin-left:10px;
+    margin-right: 10px;
 }
