--- a/PythonProject1/templates/index.html
+++ b/PythonProject1/templates/index.html
@@ -51,23 +51,17 @@
 
             <div class="slide photo">
             <img src="../static/photo/main-photo-1.jpg" alt="">
-            <p>Глобальная инфа о базе1
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            <p>Турбаза "Тёплый огонёк" - это уютный очаг на берегу Байкала. Здесь природная красота уникального озера объединяется со всеми удобствами городских отелей. Больше не надо выбирать между местом силы и личным комфортом, ведь в "Тёплом огоньке" мы собрали лучшее из обоих миров. Помимо комфортабельных номеров на территории турбазы расположены сауна, бассейн, ресторан со свежими продуктами, а также прокат сапов, гидроциклов и туристического снаряжения. У вас не будет времени скучать!</p>
             </div>
 
             <div class="slide photo">
             <img src="../static/photo/main-house.jpg" alt="">
-            <p>Глобальная инфа о базе2
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            <p>В "Тёплом огоньке" есть только чистые и ухоженные номера, выполненные в виде небольших домиков. Все постройки турбазы выполнены из высококачественного дерева и никак не угрожают ни байкальской природе, ни вашему отдыху. Ознакомьтесь со списком номеров и забронируйте себе окно в мир красоты, свежести и комфорта.</p>
             </div>
 
             <div class="slide photo">
-            <img src="../static/photo/main-house.jpg" alt="">
-            <p>Глобальная инфа о базе3
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            <img src="../static/photo/3.jpg" alt="">
+            <p>По вопросам бронирования, дополнительных услуг или схемы проезда вы можете связаться с нами через наши контакты в соцсетях, электронной почте или по телефону 8-800-555-35-35. Приятного отдыха!</p>
             </div>
 
         </div>
@@ -86,24 +80,18 @@
         <div id="slides-room">
 
             <div class="slide photo">
-            <img src="../static/photo/main-photo-1.jpg" alt="">
-            <p>Глобальная инфа о базе1
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            <img src="../static/photo/rooms/1.jpg" alt="">
+            <p>Первый номер с видом на озеро - комфортабельные апартаменты с возможностью наблюдать всю красоту вод Байкала с байкальских гор. Номер однокомнатный, есть терраса с шезлонгами, туалет и душ в тепле и уюте, розетки, бесплатный интернет - всё для незабываемого отдыха.</p>
             </div>
 
             <div class="slide photo">
-            <img src="../static/photo/main-house.jpg" alt="">
-            <p>Глобальная инфа о базе2
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            <img src="../static/photo/rooms/2.jpg" alt="">
+            <p>Номер 02 для тех, кто хочет наблюдать за красивыми, но часто холодными водами Байкала из тёплой и комфортной ванны. В вашем распоряжении уютная спальня с телевизором и интернетом, а также целая ванная комната, с душем, туалетом и жемчужиной этого номера - джакузи. Получите уникальный опыт прямо сейчас.</p>
             </div>
 
             <div class="slide photo">
-            <img src="../static/photo/main-house.jpg" alt="">
-            <p>Глобальная инфа о базе3
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            <img src="../static/photo/main-3.jpg" alt="">
+            <p>Номер 03 - самые роскошные апартаменты нашей турбазы. Это отдельный домик с 3 комнатами, оформленными по эскизу итальянского дизайнера. Вас ожидают: 2 телевизора с коллекцией фильмов и игровой приставкой, аудиосистема с возможностью раствориться в музыке в любой точке номера, а также бесплатные завтраки в нашем ресторане.</p>
             </div>
 
         </div>
@@ -130,7 +118,7 @@
     <input type="text" placeholder="Введите Ваше имя" name="name" required>
 
     <label>Номер телефона</label>
-    <input type="tel" placeholder="Введите номер телефона" name="phone_number" required>
+    <input type="tel" name="phone_number" required inputmode="tel" placeholder="+7 (___) ___-__-__">
 
     <label>Дата заезда</label>
     <input type="date" name="date_arrival" required>
@@ -174,122 +162,121 @@
 
                 </div>
                 <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <img src="../static/photo/feedbacks/2.jpg" class="feedback-photo">
                     <div class="feedback-name-space">
                         <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
                             <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
 
-                        <p class="name">МАКСИМ</p>
+                        <p class="name">ОЛЬГА</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
                         <div class="feedback-separator"></div>
                         <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        <p>«Гид организовал потрясающую поездку к нерпам и профессиональную фотосъемку. Персонал очень душевный и ненавязчивый.»</p>
                         </div>
 
                 </div>
                 <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <img src="../static/photo/feedbacks/3.jpg" class="feedback-photo" alt="" height="100">
                     <div class="feedback-name-space">
                         <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
                             <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
 
-                        <p class="name">МАКСИМ</p>
+                        <p class="name">МИХАИЛ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
                         <div class="feedback-separator"></div>
                         <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
-                        </div>
-                </div>
-            </div>
-
-            <div class="slide">
-                <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
-                    <div class="feedback-name-space">
-                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
-                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
-
-                        <p class="name">МАКСИМ</p>
-                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
-                    </div>
-                        <div class="feedback-separator"></div>
-                        <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
-                        </div>
-                </div>
-                <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
-                    <div class="feedback-name-space">
-                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
-                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
-
-                        <p class="name">МАКСИМ</p>
-                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
-                    </div>
-                        <div class="feedback-separator"></div>
-                        <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
-                        </div>
-                </div>
-                <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
-                    <div class="feedback-name-space">
-                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
-                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
-
-                        <p class="name">МАКСИМ</p>
-                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
-                    </div>
-                        <div class="feedback-separator"></div>
-                        <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        <p>«Приезжал поработать. Интернет безупречный. В номере всё для комфортной работы, а Байкал оставляет приятное впечатление надолго»</p>
                         </div>
                 </div>
             </div>
 
             <div class="slide">
                 <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <img src="../static/photo/feedbacks/4.jpg" class="feedback-photo" height="100">
                     <div class="feedback-name-space">
                         <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
                             <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
 
-                        <p class="name">МАКСИМ</p>
+                        <p class="name">ЖЮЛИ</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
                         <div class="feedback-separator"></div>
                         <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        <p>«Люкс — это глубокая связь с природой при максимальном комфорте. Изысканные блюда русской кухни стали открытием. Эрудированный гид. Теплый прием и незабываемые впечатления!»</p>
                         </div>
                 </div>
                 <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <img src="../static/photo/feedbacks/5.jpg" class="feedback-photo" width="100px">
                     <div class="feedback-name-space">
                         <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
                             <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
 
-                        <p class="name">МАКСИМ</p>
+                        <p class="name">АННА</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
                         <div class="feedback-separator"></div>
                         <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        <p>«Идеальное место для ретрита. Тишина, чистый воздух, энергетика Байкала. Сбалансированное питание. Вернулась обновленным человеком.»</p>
                         </div>
                 </div>
                 <div class="feedback">
-                    <img src="../static/photo/feedbacks/1.jpg" class="feedback-photo">
+                    <img src="../static/photo/feedbacks/6.jpg" class="feedback-photo" width="200" height="100">
                     <div class="feedback-name-space">
                         <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
                             <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
 
-                        <p class="name">МАКСИМ</p>
+                        <p class="name">ДЕНИС</p>
                         <img src="../static/photo/feedbacks/5-stars.png" class="stars">
                     </div>
                         <div class="feedback-separator"></div>
                         <div class="feedback-text">
-                        <p>«Цена соответствует качеству. Интерьер — высший пилотаж: кедр, камень и современный дизайн. Вкуснейшая кухня с местными продуктами.»</p>
+                        <p>«Рай для фотографа. Каждый уголок — идеальная локация. Рассвет над Байкалом можно снимать, не выходя из номера. Помогли организовать съемку в уникальных местах.»</p>
+                        </div>
+                </div>
+            </div>
+
+            <div class="slide">
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/7.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
+                        <p class="name">СЕРГЕЙ</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Остановился на неделю... и ни разу не захотелось уехать. Тишина, покой и эта бескрайняя вода лечат душу лучше любых лекарств. Персонал ненавязчивый, но всегда поможет. Вернусь обязательно.»</p>
+                        </div>
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/8.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+
+                        <p class="name">ПОЛИНА</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Контент для соцсетей здесь генерируется сам собой. Виды с террасы, интерьеры из кедра — каждый кадр получается готовой открыткой. Рекомендую коллегам!»</p>
+                        </div>
+                </div>
+                <div class="feedback">
+                    <img src="../static/photo/feedbacks/9.jpg" class="feedback-photo">
+                    <div class="feedback-name-space">
+                        <svg width="167" height="33" viewBox="0 0 167 33" fill="none" xmlns="http://www.w3.org/2000/svg" class="trapezoid">
+                            <path d="M0 0H167L134 33H0V0Z" fill="#003F0D" ></path> </svg>
+                        <p class="name">АЛИНА</p>
+                        <img src="../static/photo/feedbacks/5-stars.png" class="stars">
+                    </div>
+                        <div class="feedback-separator"></div>
+                        <div class="feedback-text">
+                        <p>«Идеальный релакс после напряженного проекта. Просыпаться под крики чаек и пить ароматный кофе с видом на воду — вот она сказка.»</p>
                         </div>
                 </div>
             </div>
@@ -417,18 +404,30 @@
     <div class="card">
       <h3>Таблица данных</h3>
       {% if user and user.role == "admin" %}
+        <script>
+            const panel = document.getElementById('admin-btn-container');
+            panel.classList.toggle('visible');
+            location.href='#admin-btn-container';
+        </script>
         {% if rows and rows|length > 0 %}
           <table>
             <thead><tr><th>ID</th><th>Имя</th><th>Телефон</th><th>Заезд</th><th>Выезд</th><th>Комната</th></tr></thead>
             <tbody>
-              {% for r in rows %}
+               {% for r in rows %}
                 <tr>
-                  <td id="table-id">{{ r.id }}</td>
-                  <td id="table-name">{{ r.name }}</td>
-                  <td id="table-phone">{{ r.phone_number }}</td>
-                  <td id="table-arrival">{{ r.date_arrival }}</td>
-                  <td id="table-departure">{{ r.date_departure }}</td>
-                  <td id="table-room">{{ r.room_number }}</td>
+                  <td>{{ r.id }}</td>
+                  <td>{{ r.name }}</td>
+                  <td>{{ r.phone_number }}</td>
+                  <td>{{ r.date_arrival }}</td>
+                  <td>{{ r.date_departure }}</td>
+                  <td>{{ r.room_number }}</td>
+                  <td>
+                    <form method="post" action="/admin/delete-by-id-single" onsubmit="return confirm('Удалить запись?');">
+                      <input type="hidden" name="id" value="{{ r.id }}">
+                      <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                      <button type="submit">Удалить</button>
+                    </form>
+                  </td>
                 </tr>
               {% endfor %}
             </tbody>
